after first training

--- a/Run_Model.ipynb
+++ b/Run_Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "add19033",
    "metadata": {},
    "outputs": [],
@@ -20,18 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "c41a80d7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential_2\"</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential_5\"</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1mModel: \"sequential_2\"\u001b[0m\n"
+       "\u001b[1mModel: \"sequential_5\"\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -43,11 +43,11 @@
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
        "┃<span style=\"font-weight: bold\"> Layer (type)                    </span>┃<span style=\"font-weight: bold\"> Output Shape           </span>┃<span style=\"font-weight: bold\">       Param # </span>┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ dense_6 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>)             │           <span style=\"color: #00af00; text-decoration-color: #00af00\">160</span> │\n",
+       "│ dense_15 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>)             │           <span style=\"color: #00af00; text-decoration-color: #00af00\">160</span> │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_7 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">16</span>)             │           <span style=\"color: #00af00; text-decoration-color: #00af00\">528</span> │\n",
+       "│ dense_16 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">16</span>)             │           <span style=\"color: #00af00; text-decoration-color: #00af00\">528</span> │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_8 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">3</span>)              │            <span style=\"color: #00af00; text-decoration-color: #00af00\">51</span> │\n",
+       "│ dense_17 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">3</span>)              │            <span style=\"color: #00af00; text-decoration-color: #00af00\">51</span> │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n",
        "</pre>\n"
       ],
@@ -55,11 +55,11 @@
        "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
        "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)                   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      Param #\u001b[0m\u001b[1m \u001b[0m┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ dense_6 (\u001b[38;5;33mDense\u001b[0m)                 │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m32\u001b[0m)             │           \u001b[38;5;34m160\u001b[0m │\n",
+       "│ dense_15 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m32\u001b[0m)             │           \u001b[38;5;34m160\u001b[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_7 (\u001b[38;5;33mDense\u001b[0m)                 │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m16\u001b[0m)             │           \u001b[38;5;34m528\u001b[0m │\n",
+       "│ dense_16 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m16\u001b[0m)             │           \u001b[38;5;34m528\u001b[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_8 (\u001b[38;5;33mDense\u001b[0m)                 │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m3\u001b[0m)              │            \u001b[38;5;34m51\u001b[0m │\n",
+       "│ dense_17 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m3\u001b[0m)              │            \u001b[38;5;34m51\u001b[0m │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
       ]
      },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "9ad69a8b",
    "metadata": {},
    "outputs": [
@@ -136,35 +136,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error loading weights: A total of 3 objects could not be loaded. Example error message for object <Dense name=dense_12, built=True>:\n",
+      "Error loading weights: A total of 3 objects could not be loaded. Example error message for object <Dense name=dense_45, built=True>:\n",
       "\n",
-      "The shape of the target variable and the shape of the target value in `variable.assign(value)` must match. variable.shape=(4, 32), Received: value.shape=(4, 64). Target variable: <Variable path=sequential_4/dense_12/kernel, shape=(4, 32), dtype=float32, value=[[ 0.21166939 -0.11433792 -0.25654843  0.023359    0.00448847  0.36197972\n",
-      "  -0.23445888  0.2673146  -0.34634155  0.26935863 -0.01122066  0.21049798\n",
-      "  -0.21454804 -0.16626853 -0.08436832  0.3917129   0.28269446 -0.16253908\n",
-      "   0.08384046 -0.39818183  0.04523635 -0.06162331 -0.35445747 -0.19207966\n",
-      "  -0.3305429  -0.3819696  -0.2500659  -0.33054483  0.28068328  0.21229678\n",
-      "   0.02516785 -0.03443539]\n",
-      " [-0.3438389   0.34252948  0.05711052 -0.19774011  0.00418225 -0.27380458\n",
-      "  -0.04143634 -0.39422628  0.03961298 -0.31048256 -0.3156002  -0.34133196\n",
-      "   0.08890057 -0.39316514  0.40186536 -0.06156811  0.01984912 -0.27278674\n",
-      "   0.34795302 -0.20213708 -0.22794499  0.24273652  0.21654797 -0.25819737\n",
-      "  -0.01364398  0.36293966 -0.07053491  0.02353564  0.03825918 -0.10988218\n",
-      "   0.13310754  0.3060962 ]\n",
-      " [-0.06917137 -0.26546794  0.2161473   0.02948022 -0.13553232  0.12465638\n",
-      "   0.08085942 -0.21062762  0.30531847 -0.34254894 -0.05473936 -0.04164249\n",
-      "  -0.02515832 -0.25078487  0.32911682  0.09819442 -0.25670856 -0.11783165\n",
-      "  -0.02869952  0.07207504  0.19900984 -0.4017576   0.07556289  0.21641916\n",
-      "   0.3603618   0.29784656  0.22480005 -0.09555715  0.16734362  0.13701308\n",
-      "  -0.01288098  0.12244672]\n",
-      " [-0.01107767  0.16478354 -0.27056608 -0.3274646  -0.19025435  0.39412993\n",
-      "   0.35608286  0.3594702   0.02517825 -0.38044262 -0.0622665  -0.38079146\n",
-      "   0.2908998   0.17936158  0.1673094  -0.31720072  0.376163    0.01140374\n",
-      "  -0.05658948 -0.4043047  -0.14134404  0.08212185  0.2789576   0.08492467\n",
-      "  -0.04712746 -0.15562361 -0.12296999  0.3615619   0.01514477 -0.24857727\n",
-      "   0.06553301  0.12651628]]>\n",
+      "The shape of the target variable and the shape of the target value in `variable.assign(value)` must match. variable.shape=(4, 32), Received: value.shape=(4, 64). Target variable: <Variable path=sequential_15/dense_45/kernel, shape=(4, 32), dtype=float32, value=[[ 0.33223516  0.3102821  -0.3636388   0.1876021   0.22692096 -0.19721383\n",
+      "  -0.31710088  0.15006292  0.09377342 -0.2777763   0.37293506  0.37948132\n",
+      "   0.08285233  0.29534042 -0.07851943 -0.09388641 -0.0399406   0.0818173\n",
+      "   0.02986887  0.02818218 -0.05260959  0.33908927  0.00950545 -0.32837975\n",
+      "   0.18664014 -0.07972753  0.388354   -0.06007746  0.10690135 -0.15433306\n",
+      "  -0.3325139  -0.25076047]\n",
+      " [ 0.31420547 -0.21743642  0.12211561  0.18867928 -0.39646915 -0.32635102\n",
+      "  -0.29409957 -0.22081508  0.07194489  0.28577083  0.10980082  0.23904026\n",
+      "   0.11564445 -0.24952568 -0.28631443 -0.11363712 -0.16151775  0.39312404\n",
+      "  -0.14306644 -0.08621493 -0.33906156  0.14590907 -0.15364471 -0.32992968\n",
+      "  -0.09866765 -0.24229231 -0.09893784  0.0886552   0.20726073 -0.34589607\n",
+      "   0.24942988  0.3087498 ]\n",
+      " [ 0.05055419 -0.17048241 -0.2289742   0.16399676  0.11752969 -0.06202394\n",
+      "  -0.13369152 -0.3738643  -0.25308314  0.18239695 -0.24286152  0.16220844\n",
+      "   0.35991782  0.38974053  0.16808087  0.37086654  0.14882648 -0.3526413\n",
+      "   0.3588044   0.3614282  -0.3355878  -0.29652253  0.38336438  0.20546502\n",
+      "   0.31932932 -0.23714948 -0.22892086 -0.0656541  -0.03731716  0.18336368\n",
+      "  -0.17383285  0.40035677]\n",
+      " [-0.2774508  -0.24749218  0.19598234  0.27372777 -0.2351661   0.10426962\n",
+      "   0.1562373  -0.26104292  0.305786    0.36096287 -0.14692223  0.12033504\n",
+      "  -0.4077372   0.2437613   0.1335147   0.36275673 -0.26769045  0.00459611\n",
+      "  -0.1340982   0.05954018  0.1404314   0.1488952  -0.27921236  0.07565928\n",
+      "  -0.05106521  0.10770923  0.21859461  0.18194991  0.2739604  -0.00222954\n",
+      "  -0.22478767 -0.01073906]]>\n",
       "\n",
       "List of objects that could not be loaded:\n",
-      "[<Dense name=dense_12, built=True>, <Dense name=dense_13, built=True>, <Dense name=dense_14, built=True>]\n"
+      "[<Dense name=dense_45, built=True>, <Dense name=dense_46, built=True>, <Dense name=dense_47, built=True>]\n"
      ]
     }
    ],
@@ -259,7 +259,7 @@
     "# --- RUN THE SIMULATION WITH YOUR TRAINED WEIGHTS ---\n",
     "# ------------------------------------------------------------------\n",
     "# IMPORTANT: Change this to the name of your saved weights file!\n",
-    "WEIGHTS_FILENAME = \"pretrained.weights.h5\"\n",
+    "WEIGHTS_FILENAME = \"finetuned_weights_episode_600.weights.h5\"\n",
     "# ------------------------------------------------------------------\n",
     "\n",
     "# This checks if a pygame window is already open to avoid errors\n",
@@ -272,10 +272,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "60c3e180",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully loaded final weights from: finetuned_weights_episode_550.weights.h5\n",
+      "Car crashes!\n",
+      "Total actions taken by the agent during the simulation:\n",
+      "Action 0: 146\n",
+      "Action 1: 244\n",
+      "Action 2: 18\n"
+     ]
+    }
+   ],
    "source": [
     "def run_final_agent(weights_path):\n",
     "    \"\"\"\n",
@@ -306,7 +319,7 @@
     "    except Exception as e:\n",
     "        print(f\"Error loading weights: {e}\")\n",
     "        pygame.quit(); return\n",
-    "\n",
+    "    action_counts = {0: 0, 1: 0, 2: 0}\n",
     "    # This assumes your Car class and ray_casting function are defined in a cell above\n",
     "    car = Car(CAR_IMAGE_PATH, DEFAULT_START_X, DEFAULT_START_Y, angle=DEFAULT_START_ANGLE)\n",
     "    running = True\n",
@@ -324,7 +337,8 @@
     "        prediction = ai_model.predict(state, verbose=0)\n",
     "        action = np.argmax(prediction[0])\n",
     "        action_map = {0: \"Left\", 1: \"Right\", 2: \"Brake\"}\n",
-    "\n",
+    "        action_counts[action] += 1\n",
+    "        \n",
     "        # 3. Execute action\n",
     "        if action != 2:\n",
     "            car.speed += ACCELERATION\n",
@@ -342,7 +356,7 @@
     "        crashed = False\n",
     "        try:\n",
     "            # Check if the car is on the WALL (BG_COLOR)\n",
-    "            if track_surface.get_at((int(car.x), int(car.y)))[:3] == BG_COLOR:\n",
+    "            if track_surface.get_at((int(car.x), int(car.y)))[:3] == DRAW_COLOR:\n",
     "                crashed = True\n",
     "        except IndexError:\n",
     "            crashed = True # Crashed if out of screen bounds\n",
@@ -350,6 +364,11 @@
     "        if crashed:\n",
     "            # Simple reset on crash\n",
     "            car = Car(CAR_IMAGE_PATH, DEFAULT_START_X, DEFAULT_START_Y, angle=DEFAULT_START_ANGLE)\n",
+    "            print(\"Car crashes!\")\n",
+    "            print(\"Total actions taken by the agent during the simulation:\")\n",
+    "            for action, count in action_counts.items():\n",
+    "                print(f\"Action {action}: {count}\")\n",
+    "            action_counts = {0: 0, 1: 0, 2: 0}\n",
     "\n",
     "        # 5. Render everything\n",
     "        screen.blit(track_surface, (0, 0))\n",
@@ -369,7 +388,7 @@
     "# --- RUN YOUR FINAL AGENT ---\n",
     "# ------------------------------------------------------------------\n",
     "# IMPORTANT: Change this to the name of the weights file saved in Phase 2\n",
-    "WEIGHTS_FILENAME = \"final_imitation_weights.h5\"\n",
+    "WEIGHTS_FILENAME = \"finetuned_weights_episode_550.weights.h5\"\n",
     "# ------------------------------------------------------------------\n",
     "\n",
     "if not pygame.display.get_init():\n",
@@ -377,6 +396,14 @@
     "else:\n",
     "    print(\"Pygame window may already be open. Please restart the kernel to run again.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd9ae3a7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
