Refactor model training and data collection processes

--- a/Tuning_Weignts.ipynb
+++ b/Tuning_Weignts.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "836fd713",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
     "        self.model = model_fn()\n",
     "        self.target_model = model_fn()\n",
     "        self.update_target_model()\n",
-    "        self.memory = deque(maxlen=20000)\n",
+    "        self.memory = deque(maxlen=30000)\n",
     "        self.gamma = 0.99\n",
     "        self.epsilon = 1.0 # Will be reset after loading weights\n",
     "        self.epsilon_min = 0.01\n",
@@ -122,7 +122,7 @@
     "    if car.speed < 0.2: reward -= 0.5\n",
     "    reward += car.speed * 0.5\n",
     "    current_state, _ = ray_casting(car, track_image)\n",
-    "    reward += current_state[1] * 0.005\n",
+    "    reward += current_state[1] * 0.003\n",
     "    track_surface = pygame.image.load(TRACK_IMAGE_PATH).convert()\n",
     "\n",
     "    car.speed += ACCELERATION\n",
@@ -218,7 +218,7 @@
     "        \n",
     "        if (e + 1) % 50 == 0:\n",
     "            # Save with a new name to distinguish from pre-trained weights\n",
-    "            agent.model.save_weights(f\"finetuned_weights_episode_{e+1}.weights.h5\")\n",
+    "            agent.model.save_weights(f\"a_finetuned_weights_episode_{e+1}.weights.h5\")\n",
     "            print(f\"Saved fine-tuned weights at episode {e+1}\")\n",
     "\n",
     "    pygame.quit()\n",
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "4ca5e2ea",
    "metadata": {},
    "outputs": [
@@ -2092,7 +2092,7 @@
    ],
    "source": [
     "if __name__==\"__main__\":\n",
-    "    train_dqn_finetune(episodes=1000, pretrained_weights_path=\"pretrained.weights.h5\")"
+    "    train_dqn_finetune(episodes=1000, pretrained_weights_path=\"finetuned_weights_episode_550.weights.h5\")"
    ]
   },
   {
