--- a/Run_Model.ipynb
+++ b/Run_Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "id": "add19033",
    "metadata": {},
    "outputs": [],
@@ -20,18 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "id": "c41a80d7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential_5\"</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential_41\"</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1mModel: \"sequential_5\"\u001b[0m\n"
+       "\u001b[1mModel: \"sequential_41\"\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -43,11 +43,11 @@
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
        "┃<span style=\"font-weight: bold\"> Layer (type)                    </span>┃<span style=\"font-weight: bold\"> Output Shape           </span>┃<span style=\"font-weight: bold\">       Param # </span>┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ dense_15 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>)             │           <span style=\"color: #00af00; text-decoration-color: #00af00\">160</span> │\n",
+       "│ dense_123 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)               │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">32</span>)             │           <span style=\"color: #00af00; text-decoration-color: #00af00\">160</span> │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_16 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">16</span>)             │           <span style=\"color: #00af00; text-decoration-color: #00af00\">528</span> │\n",
+       "│ dense_124 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)               │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">16</span>)             │           <span style=\"color: #00af00; text-decoration-color: #00af00\">528</span> │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_17 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">3</span>)              │            <span style=\"color: #00af00; text-decoration-color: #00af00\">51</span> │\n",
+       "│ dense_125 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)               │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">3</span>)              │            <span style=\"color: #00af00; text-decoration-color: #00af00\">51</span> │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n",
        "</pre>\n"
       ],
@@ -55,11 +55,11 @@
        "┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━━━┓\n",
        "┃\u001b[1m \u001b[0m\u001b[1mLayer (type)                   \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mOutput Shape          \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1m      Param #\u001b[0m\u001b[1m \u001b[0m┃\n",
        "┡━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━━━┩\n",
-       "│ dense_15 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m32\u001b[0m)             │           \u001b[38;5;34m160\u001b[0m │\n",
+       "│ dense_123 (\u001b[38;5;33mDense\u001b[0m)               │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m32\u001b[0m)             │           \u001b[38;5;34m160\u001b[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_16 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m16\u001b[0m)             │           \u001b[38;5;34m528\u001b[0m │\n",
+       "│ dense_124 (\u001b[38;5;33mDense\u001b[0m)               │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m16\u001b[0m)             │           \u001b[38;5;34m528\u001b[0m │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense_17 (\u001b[38;5;33mDense\u001b[0m)                │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m3\u001b[0m)              │            \u001b[38;5;34m51\u001b[0m │\n",
+       "│ dense_125 (\u001b[38;5;33mDense\u001b[0m)               │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m3\u001b[0m)              │            \u001b[38;5;34m51\u001b[0m │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
       ]
      },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "id": "9ad69a8b",
    "metadata": {},
    "outputs": [
@@ -136,35 +136,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error loading weights: A total of 3 objects could not be loaded. Example error message for object <Dense name=dense_45, built=True>:\n",
+      "Error loading weights: A total of 3 objects could not be loaded. Example error message for object <Dense name=dense_126, built=True>:\n",
       "\n",
-      "The shape of the target variable and the shape of the target value in `variable.assign(value)` must match. variable.shape=(4, 32), Received: value.shape=(4, 64). Target variable: <Variable path=sequential_15/dense_45/kernel, shape=(4, 32), dtype=float32, value=[[ 0.33223516  0.3102821  -0.3636388   0.1876021   0.22692096 -0.19721383\n",
-      "  -0.31710088  0.15006292  0.09377342 -0.2777763   0.37293506  0.37948132\n",
-      "   0.08285233  0.29534042 -0.07851943 -0.09388641 -0.0399406   0.0818173\n",
-      "   0.02986887  0.02818218 -0.05260959  0.33908927  0.00950545 -0.32837975\n",
-      "   0.18664014 -0.07972753  0.388354   -0.06007746  0.10690135 -0.15433306\n",
-      "  -0.3325139  -0.25076047]\n",
-      " [ 0.31420547 -0.21743642  0.12211561  0.18867928 -0.39646915 -0.32635102\n",
-      "  -0.29409957 -0.22081508  0.07194489  0.28577083  0.10980082  0.23904026\n",
-      "   0.11564445 -0.24952568 -0.28631443 -0.11363712 -0.16151775  0.39312404\n",
-      "  -0.14306644 -0.08621493 -0.33906156  0.14590907 -0.15364471 -0.32992968\n",
-      "  -0.09866765 -0.24229231 -0.09893784  0.0886552   0.20726073 -0.34589607\n",
-      "   0.24942988  0.3087498 ]\n",
-      " [ 0.05055419 -0.17048241 -0.2289742   0.16399676  0.11752969 -0.06202394\n",
-      "  -0.13369152 -0.3738643  -0.25308314  0.18239695 -0.24286152  0.16220844\n",
-      "   0.35991782  0.38974053  0.16808087  0.37086654  0.14882648 -0.3526413\n",
-      "   0.3588044   0.3614282  -0.3355878  -0.29652253  0.38336438  0.20546502\n",
-      "   0.31932932 -0.23714948 -0.22892086 -0.0656541  -0.03731716  0.18336368\n",
-      "  -0.17383285  0.40035677]\n",
-      " [-0.2774508  -0.24749218  0.19598234  0.27372777 -0.2351661   0.10426962\n",
-      "   0.1562373  -0.26104292  0.305786    0.36096287 -0.14692223  0.12033504\n",
-      "  -0.4077372   0.2437613   0.1335147   0.36275673 -0.26769045  0.00459611\n",
-      "  -0.1340982   0.05954018  0.1404314   0.1488952  -0.27921236  0.07565928\n",
-      "  -0.05106521  0.10770923  0.21859461  0.18194991  0.2739604  -0.00222954\n",
-      "  -0.22478767 -0.01073906]]>\n",
+      "The shape of the target variable and the shape of the target value in `variable.assign(value)` must match. variable.shape=(4, 32), Received: value.shape=(4, 64). Target variable: <Variable path=sequential_42/dense_126/kernel, shape=(4, 32), dtype=float32, value=[[-0.23685893 -0.06073299  0.33682036 -0.08710808  0.3521924  -0.04636797\n",
+      "   0.2709021   0.35026324 -0.07572749 -0.02431053  0.40008897  0.22819954\n",
+      "  -0.15395638  0.36628926  0.36562598 -0.14341685  0.15896487 -0.054066\n",
+      "   0.23976481 -0.35768837 -0.25903717 -0.049725    0.02800611 -0.26188195\n",
+      "   0.15255195  0.40119267 -0.11390129  0.2985571   0.0814296   0.02732408\n",
+      "   0.2983405  -0.13282526]\n",
+      " [-0.28503448 -0.25244987 -0.09811771 -0.11161521  0.0056546  -0.27458578\n",
+      "  -0.06426612 -0.21189958 -0.33281574  0.35008764  0.12161958 -0.3475892\n",
+      "   0.08241609 -0.37503356  0.23186898  0.12444264 -0.25257796 -0.05039319\n",
+      "  -0.3791609   0.22286552  0.05762202  0.01282695  0.33110005 -0.11067885\n",
+      "  -0.40251514  0.13372618 -0.09465632  0.02671283 -0.00600931 -0.08219805\n",
+      "  -0.05804834 -0.33652288]\n",
+      " [-0.12050015 -0.17942673  0.21303159 -0.06624892 -0.22956151  0.34731025\n",
+      "   0.10129994 -0.1787523   0.08242649 -0.05127019  0.09340823 -0.22364478\n",
+      "   0.21535832 -0.00573891  0.20695227  0.13438249  0.33001912  0.15378207\n",
+      "   0.39194673  0.16163707  0.13593906 -0.02193519  0.26105165 -0.03044713\n",
+      "  -0.35331583  0.15198869 -0.267013    0.22011048  0.13937342 -0.40357655\n",
+      "  -0.04512832 -0.02722576]\n",
+      " [-0.19986248  0.15270221 -0.13711    -0.10028681 -0.081328    0.2684812\n",
+      "   0.30133104 -0.22593154 -0.35533696 -0.33530077 -0.3625281   0.11130714\n",
+      "   0.32219613  0.08343732  0.25680834  0.3369655  -0.01937327  0.12053168\n",
+      "   0.10603184 -0.33615488  0.03410107  0.10159206  0.3432848  -0.36679465\n",
+      "  -0.27851924 -0.01818305 -0.00295234 -0.3043509   0.18758363 -0.12150532\n",
+      "  -0.2996598   0.00336882]]>\n",
       "\n",
       "List of objects that could not be loaded:\n",
-      "[<Dense name=dense_45, built=True>, <Dense name=dense_46, built=True>, <Dense name=dense_47, built=True>]\n"
+      "[<Dense name=dense_126, built=True>, <Dense name=dense_127, built=True>, <Dense name=dense_128, built=True>]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Yash\\OneDrive\\Desktop\\Neural Networks Car Project\\.venv\\Lib\\site-packages\\keras\\src\\saving\\saving_lib.py:797: UserWarning: Skipping variable loading for optimizer 'adam', because it has 2 variables whereas the saved optimizer has 14 variables. \n",
+      "  saveable.load_own_variables(weights_store.get(inner_path))\n"
      ]
     }
    ],
@@ -272,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 57,
    "id": "60c3e180",
    "metadata": {},
    "outputs": [
@@ -280,12 +288,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Successfully loaded final weights from: finetuned_weights_episode_550.weights.h5\n",
+      "Successfully loaded final weights from: final_imitation.weights.h5\n",
       "Car crashes!\n",
       "Total actions taken by the agent during the simulation:\n",
-      "Action 0: 146\n",
-      "Action 1: 244\n",
-      "Action 2: 18\n"
+      "Action 0: 1\n",
+      "Action 1: 49\n",
+      "Action 2: 0\n"
      ]
     }
    ],
@@ -388,7 +396,7 @@
     "# --- RUN YOUR FINAL AGENT ---\n",
     "# ------------------------------------------------------------------\n",
     "# IMPORTANT: Change this to the name of the weights file saved in Phase 2\n",
-    "WEIGHTS_FILENAME = \"finetuned_weights_episode_550.weights.h5\"\n",
+    "WEIGHTS_FILENAME = \"final_imitation.weights.h5\"\n",
     "# ------------------------------------------------------------------\n",
     "\n",
     "if not pygame.display.get_init():\n",
